docs: Revise README for clarity and organization, update setup instructions, and remove outdated sections