@@ -2,145 +2,120 @@
 
 A JavaFX-based student notification and management system built with Java 21 and Maven.
 
-## 🚀 Features
+## Quick start (standardized Linux workflow)
 
-- Student record management
-- Email notification system
-- Subject tracking and management
-- Database integration with MySQL
-- Modern JavaFX user interface
+This section describes a tested, repeatable way to run the app on Linux (adapt the paths for macOS/Windows).
 
-## 📋 Prerequisites
+Prerequisites
 
-Before running this application, ensure you have:
+- Java 21 (JDK 21) installed
+- MySQL server
+- Git
 
-- **Java 21** (JDK 21 or later) - [Download here](https://www.oracle.com/java/technologies/downloads/#java21)
-- **MySQL** database server
-- **Git** (for cloning the repository)
-
-## 🛠️ Installation
-
-1. **Clone the repository**
-   ```bash
-   git clone https://github.com/toxicalchemist/notified.git
-   cd notified
-   ```
-
-2. **Set up JAVA_HOME** (Windows)
-   ```powershell
-   $env:JAVA_HOME = "C:\Program Files\Java\jdk-21"
-   [System.Environment]::SetEnvironmentVariable("JAVA_HOME", "C:\Program Files\Java\jdk-21", "User")
-   ```
-
-3. **Configure MySQL Database**
-   - Create a MySQL database for the application
-   - Update database connection settings in `src/notif1ed/DatabaseConnectionn.java`
-
-## ▶️ Running the Application
-
-### Windows (PowerShell)
-
-**Quick Run:**
-```powershell
-.\run.ps1
-```
-
-**Manual Run:**
-```powershell
-$env:JAVA_HOME = "C:\Program Files\Java\jdk-21"
-.\mvnw.cmd javafx:run
-```
-
-### Linux/Mac
+1. Set your JAVA_HOME for this session (you provided this path):
 
 ```bash
-export JAVA_HOME=/path/to/jdk-21
+export JAVA_HOME=/usr/lib/jvm/jdk-21.0.8-oracle-x64
+export PATH="$JAVA_HOME/bin:$PATH"
+```
+
+To make it persistent (Bash):
+
+```bash
+printf '\n# Java 21\nexport JAVA_HOME=/usr/lib/jvm/jdk-21.0.8-oracle-x64\nexport PATH="$JAVA_HOME/bin:$PATH"\n' >> ~/.bashrc
+source ~/.bashrc
+```
+
+2. Make the Maven wrapper executable (only once):
+
+```bash
+chmod +x ./mvnw
+```
+
+3. Configure the database
+
+- Create the application database and a user (example):
+
+```sql
+CREATE DATABASE notified_DB CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
+CREATE USER 'notifuser'@'localhost' IDENTIFIED BY 'your_password';
+GRANT ALL PRIVILEGES ON notified_DB.* TO 'notifuser'@'localhost';
+FLUSH PRIVILEGES;
+```
+
+- Update `src/notif1ed/DatabaseConnectionn.java` to match your DB credentials:
+
+```java
+private static final String URL = "jdbc:mysql://localhost:3306/notified_db";
+private static final String USER = "notifuser";
+private static final String PASSWORD = "your_password";
+```
+
+4. Run the application (recommended):
+
+```bash
 ./mvnw javafx:run
 ```
 
-## 🔨 Building the Project
+This uses the `javafx-maven-plugin` configured in `pom.xml` and will download required JavaFX modules automatically.
 
-**Windows:**
-```powershell
-.\build.ps1
-```
+5. Build a distributable JAR
 
-**Linux/Mac:**
 ```bash
 ./mvnw clean package
 ```
 
-The compiled JAR file will be in the `target/` directory.
+The artifact will be created in `target/` (e.g. `target/Notif1ed-1.0.0.jar`). Note: running that jar directly may still require JavaFX on the module path.
 
-## 📦 Maven Commands
+To run the jar with a local JavaFX SDK (example):
 
-- **Compile:** `.\mvnw.cmd compile`
-- **Run:** `.\mvnw.cmd javafx:run`
-- **Package:** `.\mvnw.cmd package`
-- **Clean:** `.\mvnw.cmd clean`
-- **Test:** `.\mvnw.cmd test`
-
-## 🏗️ Project Structure
-
-```
-Notif1ed/
-├── src/
-│   └── notif1ed/
-│       ├── *.java           # Java source files
-│       ├── *.fxml           # JavaFX UI layouts
-│       └── *.css            # Stylesheets
-├── pom.xml                  # Maven configuration
-├── run.ps1                  # Quick run script (Windows)
-├── build.ps1                # Build script (Windows)
-└── README.md
+```bash
+java --module-path /path/to/javafx-sdk-21/lib --add-modules=javafx.controls,javafx.fxml -jar target/Notif1ed-1.0.0.jar
 ```
 
-## 🔧 Technology Stack
+6. IDE usage
 
-- **Java 21** (Latest LTS)
-- **JavaFX 21.0.5** - UI Framework
-- **Maven** - Build & Dependency Management
-- **MySQL Connector/J 9.2.0** - Database connectivity
-- **JavaMail 1.6.2** - Email functionality
+- Import the project as a Maven project in IntelliJ or NetBeans.
+- Set the project's SDK to JDK 21.
+- Run `notif1ed.Notif1ed` as a Java application. If the IDE complains about JavaFX runtime, either use the Maven run configuration or add JavaFX as a library/module.
 
-## 📝 Configuration
+Troubleshooting
 
-### Database Configuration
+- If `./mvnw` fails with a Java version error, ensure `java -version` reports a Java 21 runtime.
+- If you see `MySQL JDBC Driver not found`, Maven should download `mysql-connector-j` from `pom.xml`; make sure `./mvnw clean package` completes without errors.
+- If FXML resources are not found, verify they exist in `src/notif1ed/` and that code loads them with `getResource("LandingPage.fxml")` (relative to `notif1ed` package).
 
-Edit `src/notif1ed/DatabaseConnectionn.java` to configure your MySQL connection:
+Helpful commands
 
-```java
-// Update with your database credentials
-String url = "jdbc:mysql://localhost:3306/your_database";
-String username = "your_username";
-String password = "your_password";
+```bash
+# check Java
+java -version
+javac -version
+
+# make mvnw executable (if needed)
+chmod +x ./mvnw
+
+# build
+./mvnw clean package
+
+# run via Maven/JavaFX plugin
+./mvnw javafx:run
+
+# run compiled jar (if using a local JavaFX SDK)
+java --module-path /path/to/javafx-sdk-21/lib --add-modules=javafx.controls,javafx.fxml -jar target/Notif1ed-1.0.0.jar
 ```
 
-### Email Configuration
+Files to edit for local setup
 
-Configure email settings in the appropriate controller for email notifications.
+- `src/notif1ed/DatabaseConnectionn.java` — set your JDBC URL, username, and password.
+- Optionally: any controller that contains email settings (search for SMTP or mail properties in `src/notif1ed`).
 
-## 🤝 Contributing
+Notes
 
-1. Fork the repository
-2. Create your feature branch (`git checkout -b feature/AmazingFeature`)
-3. Commit your changes (`git commit -m 'Add some AmazingFeature'`)
-4. Push to the branch (`git push origin feature/AmazingFeature`)
-5. Open a Pull Request
+- `pom.xml` targets Java 21 and pulls JavaFX 21.0.5 via Maven dependencies and the `javafx-maven-plugin`.
+- For a portable runtime image consider adding a `jlink` or an assembly profile — I can add a `jlink` profile if you want a single native image for Linux.
 
-## 📄 License
+If you'd like, I can also:
 
-This project is open source and available under the MIT License.
-
-## 👥 Authors
-
-- **toxicalchemist** - [GitHub Profile](https://github.com/toxicalchemist)
-
-## 🐛 Known Issues
-
-- Some FXML files reference JavaFX API version 23.0.1 while running on 21.0.5 (minor warnings only)
-- Missing CSS files for some views (Login.css, LandingPage.css)
-
-## 📞 Support
-
-If you encounter any issues or have questions, please open an issue on the [GitHub repository](https://github.com/toxicalchemist/notified/issues).
+- run a quick `./mvnw -v` and `./mvnw clean package` here and paste back the output,
+- or add a `Makefile` or `run.sh` wrapper that sets `JAVA_HOME` and runs the project for you.
